# VisionLLM

./: .gitignore  CHATGPT_REDESIGN_SPEC.md  IMPLEMENTATION_PLAN.md  MAINTENANCE_PAGE_PLAN.md  MAINTENANCE_PAGE_PLAN_AGILE.md  Makefile  RAG.md  README.md  SPRINT_4_REPORT.md  app.py  backlog.md  bootstrap.py  config.py  llm.py  prompts.py  requirements-local.txt  requirements.txt  test-provider-models.py  test-provider.py  update-provider.py
Resources/: model.gguf
backend/: Dockerfile  Makefile  alembic.ini  pyproject.toml  tmp-reqs.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_rag_chunks.py  0003_agents.py
backend/app/: __init__.py  activity.py  auth.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: admin.py  agents.py  auth.py  chat.py  conversations.py  health.py  maintenance.py  messages.py  projects.py  sqltools.py
backend/app/services/: provider_clients.py  tgi_client.py
backend/scripts/: seed.py
backend/tests/: test_agents.py  test_chat_stream.py  test_health.py  test_maintenance.py  test_sqltools.py
configs/: retrieval.yaml  sources.yaml
docs/: DEPLOY.md  RAILWAY_DEPLOY.md  RUNBOOK.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
infra/: docker-compose.prod.yml  docker-compose.yml  env.api.example  env.tgi.example
ingestion/: 01_collect.py  02_clean.py  03_chunk.py  04_embed.py  05_index.py  __init__.py  utils_extract.py  utils_url.py
scripts/: auto_coder.py  railway-oauth-setup.sh  railway-setup.sh  railway-urls.sh  (+1 more)
tools/: sql_tools.py
(+59 files in other folders)
