[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W", "B", "UP", "N", "ANN", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[project]
name = "visionbi-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "sqlglot>=26.0.0",
    "sqlfluff>=3.2.0",
]


